# bchcodes

./: .gitignore  CMakeLists.txt  README.md
include/: BCHCodes.h  GF.h  GaussianElimination.h  ReedMullerCodes.h
src/: BCHCodes.cpp  GF.cpp  GaussianElimination.cpp  main.cpp
